2011-06-15 Riccardo Mottola <rm@gnu.org>

	* Document.m
	Fix warning and reorganize code.
	
2011-06-07 Riccardo Mottola <rm@gnu.org>

	* Controller.h
	* DigitSource.h
	* Document.h
	* Document.m
	* KnobView.h
	* KnobView.m
	* Sudoku.h
	* SudokuView.h
	* SudokuView.m
	Organized imports better.

2011-06-07 Riccardo Mottola <rm@gnu.org>

	* Controller.h
	* Controller.m
	* DigitSource.h
	* DigitSource.m
	* Document.h
	* Document.m
	* KnobView.h
	* KnobView.m
	* Sudoku.h
	* Sudoku.m
	* SudokuInfo.plist
	* SudokuView.h
	* SudokuView.m
	* main.m
	* Sudoku.pcproj/PC.project
	Put boiler plate on each file.

2011-06-07 Riccardo Mottola <rm@gnu.org>

	* Controller.m
	include instead of import system header.

2011-06-06 Riccardo Mottola <rm@gnu.org>

	* Resources/Sudoku.tiff
	Adjusted resolution.

	Imported.
	Icons renamed to Resources